apps/webpt/webpt-dp.yml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: webpt-ws
  namespace: balhau-dev
  labels:
    version: 0.0.7
    app: webpt-ws
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webpt-ws
  template:
    metadata:
      labels:
        app: webpt-ws
    spec:
      containers:
      - name: balhauapi
        image: 10.108.252.69:5000/balhau/webpt:arm32v7-0.0.7
        resources:
          requests:
            memory: "128Mi"
            cpu: "800m"
            
        ports:
        - containerPort: 8085
          name: registry
          protocol: TCP
